--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <h2><a href="project-details.html">Auditorias Internas</a></h2>
                             <p>Este curso está diseñado para profesionales interesados en mejorar sus habilidades en la auditoría de sistemas de gestión de SST. A lo largo de los módulos, los participantes aprenderán a planificar, ejecutar y documentar auditorías, asegurando el cumplimiento normativo y promoviendo la mejora continua en la seguridad y salud laboral.</p>
-                            <a href="https://c91f-info.systeme.io/course/auditoria" class="details-btn" style="background: #05708d; color: #bb9014; border-color: #fff;">Conoce más aquí</a>
+                            <a href="https://c91f-info.systeme.io/venta" class="details-btn" style="background: #05708d; color: #bb9014; border-color: #fff;">Conoce más aquí</a>
 
                         </div>
                     </div>
@@ -379,7 +379,7 @@
                             <div class="footer-widget widget_contact_info wow fadeInUp delay-0-6s">
                                 <h6 class="footer-title">Informacion de Contacto</h6>
                                 <ul>
-                                    <li><i class="far fa-map-marker-alt"></i> 55 Main Street, 2nd block, New York City</li>
+                                    <li><i class="far fa-map-marker-alt"></i>Rionegro Antioquia</li>
                                     <li><i class="far fa-envelope"></i> <a href="mailto:info@adrianaramirez.com.co">info@adrianaramirez.com.co</a></li>
                                     <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+880 (123) 456 88</a></li>
                                 </ul>
