--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                     <div class="col-lg-8" style="flex: 0 0 100%; max-width: 100%; padding: 15px;">
                         <div class="contact-page-content rmb-55 wow fadeInUp delay-0-2s" style="text-align: justify; margin-bottom: 55px;">
                             <div class="section-title mb-30" style="margin-bottom: 30px;">
-                                <h2 style="color: #bb9014; font-size: 2.5em; margin-bottom: 20px;">Hablemos <span></span></h2>
+                                <h2 style="color: #bb9014; font-size: 2.5em; margin-bottom: 20px;">Conóceme <span></span></h2>
                                 <p style="font-size: 1.1em; margin-bottom: 15px;">Soy Adriana Ramírez, probablemente me hayas visto en redes como @adrianaramirez.sst. Soy profesional en seguridad y salud en el trabajo, especialista en Alta Gerencia para sistemas integrados de gestión y auditora interna para sistemas integrados de gestión.</p>
                                 <p style="font-size: 1.1em; margin-bottom: 15px;">Con más de 10 años de experiencia y más de 60 empresas asesoradas, me he dedicado a fortalecer la seguridad laboral en diversas organizaciones y como docente de universidad, comparto mi experiencia y conocimientos con la próxima generación de profesionales.</p>
                                 <p style="font-size: 1.1em; margin-bottom: 15px;">Fuera del ámbito profesional, soy madre de una hermosa niña, esposa y empresaria. Disfruto de momentos de tranquilidad con un buen libro en mano, ya que la lectura es una de mis mayores pasiones.</p>
