--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <b>Ramírez</b></h1>
                             <p>"Empoderando a las nuevas generaciones de profesionales en seguridad y salud en el trabajo, fortaleciendo sus conocimientos para construir un mundo más seguro. La seguridad es nuestra misión, el futuro es nuestro compromiso."</p>
                             <div class="hero-btns">
-                                <a href="contact.html" class="theme-btn">Conoce Me<i class="far fa-angle-right"></i></a>
+                                <a href="contact.html" class="theme-btn">conóceme<i class="far fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
