--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                         <i class="far fa-phone"></i>
                                         <div class="content">
                                             <span>Contactame</span><br>
-                                            <a href="callto:+000(123)45688">+57 3233286491</a>
+                                            <a href="callto:+000(123)45688">+57 323-3286491</a>
                                         </div>
                                     </div>
                                 </div>
@@ -381,7 +381,7 @@
                                 <ul>
                                     <li><i class="far fa-map-marker-alt"></i>Rionegro Antioquia</li>
                                     <li><i class="far fa-envelope"></i> <a href="mailto:info@adrianaramirez.com.co">info@adrianaramirez.com.co</a></li>
-                                    <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+880 (123) 456 88</a></li>
+                                    <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+57 323 3286491</a></li>
                                 </ul>
                             </div>
                         </div>
