--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <h2><a href="project-details.html">Auditorias Internas</a></h2>
                             <p>Este curso está diseñado para profesionales interesados en mejorar sus habilidades en la auditoría de sistemas de gestión de SST. A lo largo de los módulos, los participantes aprenderán a planificar, ejecutar y documentar auditorías, asegurando el cumplimiento normativo y promoviendo la mejora continua en la seguridad y salud laboral.</p>
-                            <a href="https://c91f-info.systeme.io/venta" class="details-btn" style="background: #05708d; color: #bb9014; border-color: #fff;">Conoce más aquí</a>
+                            <a href="https://www.adrianaramirez.com.co/venta" class="details-btn" style="background: #05708d; color: #bb9014; border-color: #fff;">Conoce más aquí</a>
 
                         </div>
                     </div>
