--- a/contact.html
+++ b/contact.html
@@ -336,13 +336,13 @@
                         </div>
                         
                         <!-- Contact Info Section -->
-                        <div class="col contact-info">
-                            <div class="footer-widget widget_contact_info wow fadeInUp delay-0-6s">
-                                <h6 class="footer-title">Informacion de Contacto</h6>
-                                <ul>
-                                    <li><i class="far fa-map-marker-alt"></i> Rionegro antioquia</li>
-                                    <li><i class="far fa-envelope"></i> <a href="mailto:info@adrianaramirez.com.co">info@adrianaramirez.com.co</a></li>
-                                    <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+57 323 3286491</a></li>
+                        <div class="col contact-info" style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; margin: 0 auto; width: 100%; height: 100vh;">
+                            <div class="footer-widget widget_contact_info wow fadeInUp delay-0-6s" style="max-width: 100%; padding: 20px;">
+                                <h6 class="footer-title" style="margin-bottom: 20px;">Información de Contacto</h6>
+                                <ul style="padding: 0; list-style: none;">
+                                    <li style="margin-bottom: 10px;"><i class="far fa-map-marker-alt"></i>Rionegro Antioquia</li>
+                                    <li style="margin-bottom: 10px;"><i class="far fa-envelope"></i> <a href="mailto:info@adrianaramirez.com.co">info@adrianaramirez.com.co</a></li>
+                                    <li style="margin-bottom: 10px;"><i class="far fa-phone"></i> <a href="callto:+57(323)3286491">+57 323 3286491</a></li>
                                 </ul>
                             </div>
                         </div>
